# nosh

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  windows-cross.yml
.planning/: .continue-here.md  .pending-auth-captures.jsonl  CONVENTIONS.md  HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RESEARCH-BRIEF-v1.1.md  ROADMAP.md  STATE.md  config.json  v1.1-MILESTONE-AUDIT.md
.planning/debug/: phase17-client-bugs.md  phase17-round2-triage.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.1-REQUIREMENTS.md
.planning/milestones/v1.0-phases/01-quic-transport-skeleton/: 01-RESEARCH.md  01-SKELETON.md  02-PLAN.md  03-PLAN.md  03-SUMMARY.md
.planning/milestones/v1.0-phases/02-ssh-key-mutual-auth/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md
.planning/milestones/v1.0-phases/03-pty-session-core/: 03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md
.planning/milestones/v1.0-research/: FEATURES.md  STACK.md
.planning/milestones/v1.1-phases/04-identity-threading/: 04-A-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md
.planning/milestones/v1.1-phases/05-session-persistence/: 05-01-SUMMARY.md  05-02-PLAN.md  05-03-PLAN.md  05-CONTEXT.md  05-DISCUSSION-LOG.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/milestones/v1.1-phases/06-cold-reattach-protocol/: 06-01-PLAN.md  06-03-PLAN.md  06-CONTEXT.md  06-DISCUSSION-LOG.md  06-VERIFICATION.md
.planning/milestones/v1.1-phases/07-connection-migration-validation/: 07-02-PLAN.md  07-RESEARCH.md  (+1 more)
.planning/phases/01-quic-transport-skeleton/: 01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PLAN.md  01-REVIEW.md  01-SUMMARY.md  01-VERIFICATION.md  02-SUMMARY.md  04-PLAN.md  04-SUMMARY.md
.planning/phases/02-ssh-key-mutual-auth/: 02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-REVIEW-FIX.md  02-REVIEW.md  02-VERIFICATION.md
.planning/phases/03-pty-session-core/: 03-01-PLAN.md  03-01-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-DISCUSSION-LOG.md  03-RESEARCH.md  03-REVIEW.md  03-VERIFICATION.md
.planning/phases/04-identity-threading/: 04-B-SUMMARY.md  04-PLAN-A.md  04-PLAN-B.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-session-persistence/: 05-01-PLAN.md  05-02-SUMMARY.md  05-03-SUMMARY.md  05-VERIFICATION.md  VERIFICATION.md
.planning/phases/06-cold-reattach-protocol/: 06-02-PLAN.md  06-04-PLAN.md  06-RESEARCH.md  06-VERIFICATION.md
.planning/phases/07-connection-migration-validation/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-SUMMARY.md  07-CONTEXT.md  07-DISCUSSION-LOG.md  07-REVIEW-FIX.md  07-REVIEW.md  07-VERIFICATION.md
.planning/phases/08-windows-client/: 08-01-SUMMARY.md  08-02-PLAN.md  08-REVIEW.md  08-VERIFICATION.md
.planning/phases/09-windows-client-polish-hardening/: 09-01-SUMMARY.md  09-03-PLAN.md  09-03-SUMMARY.md  09-REVIEW-FIX.md  09-REVIEW.md  09-VERIFICATION.md
.planning/phases/10-pty-reader-race-fix/: 10-01-PLAN.md  10-01-SUMMARY.md  10-02-PLAN.md  10-02-SUMMARY.md  10-CONTEXT.md  10-DISCUSSION-LOG.md  10-PATTERNS.md  10-RESEARCH.md  10-REVIEW-FIX.md  10-REVIEW.md  10-VERIFICATION-REVERIFY.md  10-VERIFICATION.md
.planning/phases/11-datagram-wire-protocol/: 11-01-PLAN.md  11-01-SUMMARY.md  11-CONTEXT.md  11-DISCUSSION-LOG.md  11-RESEARCH.md  11-REVIEW-FIX.md  11-REVIEW.md  11-VERIFICATION.md
.planning/phases/12-server-terminal-state-model/: 12-01-PLAN.md  12-01-SUMMARY.md  12-02-PLAN.md  12-02-SUMMARY.md  12-CONTEXT.md  12-DISCUSSION-LOG.md  12-RESEARCH.md  12-REVIEW-FIX.md  12-REVIEW.md  12-VERIFICATION.md
.planning/phases/13-server-datagram-sender/: 13-01-PLAN.md  13-01-SUMMARY.md  13-02-PLAN.md  13-02-SUMMARY.md  13-03-PLAN.md  13-03-SUMMARY.md  13-CONTEXT.md  13-DISCUSSION-LOG.md  13-PATTERNS.md  13-RESEARCH.md  13-REVIEW.md  13-VERIFICATION.md
.planning/phases/14-client-predictor-confirmed-rendering/: 14-01-PLAN.md  14-01-SUMMARY.md  14-02-PLAN.md  14-02-SUMMARY.md  14-03-PLAN.md  14-03-SUMMARY.md  14-CONTEXT.md  14-DISCUSSION-LOG.md  14-PATTERNS.md  14-RESEARCH.md  14-REVIEW-FIX.md  14-REVIEW.md  14-VERIFICATION.md
.planning/phases/15-client-predictor-speculative-overlay/: 15-01-PLAN.md  15-01-SUMMARY.md  15-02-PLAN.md  15-02-SUMMARY.md  15-03-PLAN.md  15-03-SUMMARY.md  15-CONTEXT.md  15-DISCUSSION-LOG.md  15-PATTERNS.md  15-RESEARCH.md  15-REVIEW-FIX.md  15-REVIEW.md  15-VERIFICATION.md
.planning/phases/16-qol-feature-pack-windows-ci-gate/: 16-01-PLAN.md  16-01-SUMMARY.md  16-02-PLAN.md  16-02-SUMMARY.md  16-03-PLAN.md  16-03-SUMMARY.md  16-CONTEXT.md  16-DISCUSSION-LOG.md  16-PATTERNS.md  16-RESEARCH.md  16-REVIEW.md  16-VERIFICATION.md
.planning/phases/17-windows-host-predictive-echo-validation/: 17-01-PLAN.md  17-01-SUMMARY.md  17-CONTEXT.md  17-DISCUSSION-LOG.md
.planning/phases/18-security-design-pass/: 18-CONTEXT.md  18-DISCUSSION-LOG.md
.planning/phases/999.3-client-terminal-rendering-correctness-pack-platform-agnostic/: 999.3-01-PLAN.md  999.3-01-SUMMARY.md  999.3-02-PLAN.md  999.3-02-SUMMARY.md  999.3-03-PLAN.md  999.3-03-SUMMARY.md  999.3-04-PLAN.md  999.3-04-SUMMARY.md  999.3-CONTEXT.md  999.3-DISCUSSION-LOG.md  999.3-PATTERNS.md  999.3-REVIEW.md  999.3-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
crates/nosh-auth/: Cargo.toml
crates/nosh-auth/src/: keys.rs  lib.rs  signer.rs  test_support.rs  verifier.rs
crates/nosh-client/: Cargo.toml
crates/nosh-client/src/: client.rs  lib.rs  main.rs  platform.rs  predictor.rs  screen.rs
crates/nosh-client/tests/: auth.rs  identity_file.rs  migration.rs  persistence.rs  predict.rs  reattach.rs  render.rs  session.rs  sync.rs  transport.rs
crates/nosh-client/tests/common/: mod.rs
crates/nosh-proto/: Cargo.toml
crates/nosh-proto/src/: codec.rs  datagram.rs  lib.rs  messages.rs  transport.rs
crates/nosh-server/: Cargo.toml
crates/nosh-server/src/: lib.rs  main.rs  pty_io.rs  registry.rs  server.rs  session.rs  terminal.rs
docs/: migration-live-check.md  windows-client-test.md  windows-echo-test.md
(+9 files in other folders)
