[package]
name = "nosh-auth"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
# Exposes `nosh_auth::test_support` (ephemeral ssh-agent harness) to downstream
# integration tests. Off by default; enabled as a dev-dependency feature.
test-support = ["dep:tempfile"]

[dependencies]
rustls = { workspace = true }
rcgen = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
ssh-key = { version = "0.6", default-features = false, features = ["ed25519", "std", "alloc"] }
ed25519-dalek = "2.2"
zeroize = "1"
x509-parser = "0.18"
sha2 = "0.10"
base64 = "0.22"
tempfile = { version = "3", optional = true }

[target.'cfg(unix)'.dependencies]
# ssh-agent-client-rs uses Unix domain sockets and does not compile on Windows.
# ALL ssh-agent-related code in nosh-auth (AgentSigner) is #[cfg(unix)]-gated
# to match this dependency gate. This is a build-availability gate, NOT a
# behavioral fork — all SPKI/cert/signing logic is identical on every platform
# (see §6 of 08-RESEARCH.md for the constraint rationale).
ssh-agent-client-rs = "1.1"

[dev-dependencies]
tempfile = "3"
getrandom = "0.2"
