[package]
name = "nosh-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "nosh_client"
path = "src/lib.rs"

[[bin]]
name = "nosh-client"
path = "src/main.rs"

[dependencies]
nosh-proto = { path = "../nosh-proto" }
nosh-auth = { path = "../nosh-auth" }
quinn = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true, features = ["signal", "io-std"] }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
ssh-key = { version = "0.6", default-features = false, features = ["ed25519", "std", "alloc"] }
ssh-agent-client-rs = "1.1"
crossterm = "0.28"
dirs = "5"

[dev-dependencies]
nosh-server = { path = "../nosh-server" }
nosh-auth = { path = "../nosh-auth", features = ["test-support"] }
ssh-key = { version = "0.6", default-features = false, features = ["ed25519", "std", "alloc"] }
ed25519-dalek = "2.2"
tokio = { workspace = true, features = ["signal", "process"] }
tempfile = "3"
# Enable quinn's qlog feature for the test build so the migration test can
# attach a QlogStream (D-05). Feature-unification means this propagates into
# the test binary without affecting the production binary path.
quinn = { workspace = true, features = ["qlog"] }
# Used by the migration test for qlog JSON-seq record validation (D-05 artifact check).
# serde_json is already a transitive dep of the qlog crate; adding it here is low cost.
serde_json = "1"
