[package]
name = "nosh-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "nosh_client"
path = "src/lib.rs"

[[bin]]
name = "nosh-client"
path = "src/main.rs"

[dependencies]
nosh-proto = { path = "../nosh-proto" }
nosh-auth = { path = "../nosh-auth" }
quinn = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true, features = ["signal", "io-std"] }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
ssh-key = { version = "0.6", default-features = false, features = ["ed25519", "std", "alloc"] }
# crossterm 0.29: events + event-stream for Windows console resize (Event::Resize).
# DO NOT enable use-dev-tty: it is Unix-only and breaks Windows event-stream build
# (crossterm #935 / Plan constraint).
crossterm = { version = "0.29", features = ["events", "event-stream"] }
# futures provides StreamExt for EventStream (crossterm event-stream async bound).
futures = "0.3"
dirs = "5"

[target.'cfg(unix)'.dependencies]
# ssh-agent-client-rs uses Unix domain sockets — not available on Windows.
# The agent code path in client.rs (from_agent, ssh_agent_connect) is
# #[cfg(unix)]-gated to match.
ssh-agent-client-rs = "1.1"

[dev-dependencies]
nosh-server = { path = "../nosh-server" }
nosh-auth = { path = "../nosh-auth", features = ["test-support"] }
ssh-key = { version = "0.6", default-features = false, features = ["ed25519", "std", "alloc"] }
ed25519-dalek = "2.2"
tokio = { workspace = true, features = ["signal", "process"] }
tempfile = "3"
getrandom = "0.2"
# Enable quinn's qlog feature for the test build so the migration test can
# attach a QlogStream (D-05). Feature-unification means this propagates into
# the test binary without affecting the production binary path.
quinn = { workspace = true, features = ["qlog"] }
# Used by the migration test for qlog JSON-seq record validation (D-05 artifact check).
# serde_json is already a transitive dep of the qlog crate; adding it here is low cost.
serde_json = "1"
