[package]
name = "nosh-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "nosh_server"
path = "src/lib.rs"

[[bin]]
name = "nosh-server"
path = "src/main.rs"

[dependencies]
nosh-proto = { path = "../nosh-proto" }
nosh-auth = { path = "../nosh-auth" }
quinn = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
ssh-key = { version = "0.6", default-features = false, features = ["ed25519", "std", "alloc"] }
dirs = "5"
portable-pty = "0.9"
uuid = { version = "1", features = ["v4"] }
nix = { version = "0.29", default-features = false, features = ["signal", "user", "poll"] }
