[package]
name = "nosh-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "nosh_server"
path = "src/lib.rs"

[[bin]]
name = "nosh-server"
path = "src/main.rs"

[dependencies]
nosh-proto = { path = "../nosh-proto" }
nosh-auth = { path = "../nosh-auth" }
quinn = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
ssh-key = { version = "0.6", default-features = false, features = ["ed25519", "std", "alloc"] }
dirs = "5"
portable-pty = "0.9"
uuid = { version = "1", features = ["v4"] }
nix = { version = "0.29", default-features = false, features = ["signal", "user", "poll", "fs"] }
# Phase 16 (D-16-01c / CR-03 re-mitigation): vte "std" re-enabled so that OSC
# accumulation uses an unbounded Vec<u8> capable of holding large OSC 52 clipboard
# payloads without truncation. CR-03's DoS risk (unbounded OSC accumulation) is
# re-mitigated by explicit caps applied in osc_dispatch() BEFORE storing:
#   - OSC 52 data truncated to OSC_52_MAX_BYTES (65536) before storing in osc52_pending
#   - OSC 0/2 title only stored when len <= MAX_TITLE_BYTES (1024)
# The transient vte internal buffer (OS pipe buffer sized) is bounded by POSIX
# pipe semantics before osc_dispatch() is called. Adversarial large-OSC tests in
# terminal.rs confirm no panic and bounded output. See 16-RESEARCH.md Pattern 1.
vte = { version = "0.15" }
